added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DN Crafts - The perfect Gift</title>
+    <!-- Primary Meta Tags -->
+    <title>DN Crafts - Personalized Gifts, Custom Acrylic Products & Gift Baskets in Pakistan</title>
+    <meta name="title" content="DN Crafts - Personalized Gifts, Custom Acrylic Products & Gift Baskets in Pakistan">
+    <meta name="description"
+        content="DN Crafts offers personalized gifts, custom acrylic boxes, Umrah Tabarak gifts, invitation cards, money bouquets, chocolate hampers & gift baskets. Perfect gifts for every occasion in Pakistan.">
+    <meta name="keywords"
+        content="personalized gifts Pakistan, custom acrylic boxes, Umrah Tabarak gifts, invitation cards, Nikkah Nama customization, bride dupata, gift baskets Pakistan, money bouquets, chocolate hampers, DN Crafts, handmade gifts, occasion gifts, flower bouquets">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="DN Crafts">
+    <meta name="copyright" content="DN Crafts 2025">
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="PK">
+    <meta name="geo.placename" content="Lahore, Pakistan">
+    <meta name="geo.position" content="31.5497,74.3436">
+    <meta name="ICBM" content="31.5497,74.3436">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-website-url.com/">
+    <meta property="og:title" content="DN Crafts - Personalized Gifts & Custom Products in Pakistan">
+    <meta property="og:description"
+        content="Discover unique personalized gifts, custom acrylic products, Umrah Tabarak gifts, and beautiful gift baskets. Perfect for every special moment in Pakistan.">
+    <meta property="og:image" content="https://your-website-url.com/pics/logo.png">
+    <meta property="og:image:alt" content="DN Crafts Logo - Personalized Gifts Pakistan">
+    <meta property="og:site_name" content="DN Crafts">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-website-url.com/">
+    <meta property="twitter:title" content="DN Crafts - Personalized Gifts & Custom Products in Pakistan">
+    <meta property="twitter:description"
+        content="Discover unique personalized gifts, custom acrylic products, Umrah Tabarak gifts, and beautiful gift baskets. Perfect for every special moment in Pakistan.">
+    <meta property="twitter:image" content="https://your-website-url.com/pics/logo.png">
+    <meta property="twitter:image:alt" content="DN Crafts Logo - Personalized Gifts Pakistan">
+
+    <!-- Additional SEO Tags -->
+    <meta name="theme-color" content="#D97706">
+    <link rel="canonical" href="https://your-website-url.com/">
+
+    <!-- Business Information -->
+    <meta name="contact" content="infodncrafts@gmail.com">
+    <meta name="phone" content="+92 302 1943684">
+    <meta name="address" content="Lakhodair, Lahore, Pakistan">
+
+    <!-- Product Categories for Better Search -->
+    <meta name="category" content="Gifts, Handicrafts, Personalized Products">
+    <meta name="coverage" content="Pakistan">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "DN Crafts",
+        "description": "Online gift shop specializing in personalized gift items, custom acrylic products, Umrah Tabarak gifts, and gift baskets in Pakistan.",
+        "url": "https://dncrafts.store/",
+        "logo": "https://dncrafts.store/pics/logo.png",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+92-302-1943684",
+            "contactType": "customer service",
+            "areaServed": "PK",
+            "availableLanguage": ["English", "Urdu"]
+        },
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Lakhodair",
+            "addressLocality": "Lahore",
+            "addressCountry": "Pakistan"
+        },
+        "sameAs": [
+            "https://www.facebook.com/dncrafts",
+            "https://www.instagram.com/dncrafts",
+            "https://www.tiktok.com/@dncrafts"
+        ],
+        "foundingDate": "2025",
+        "founders": [
+            {
+                "@type": "Person",
+                "name": "Syed Danish Ali"
+            }
+        ],
+        "makesOffer": [
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Product",
+                    "name": "Personalized Gifts",
+                    "category": "Gifts & Handicrafts"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Product",
+                    "name": "Custom Acrylic Products",
+                    "category": "Handicrafts"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Product",
+                    "name": "Umrah Tabarak Gifts",
+                    "category": "Religious Gifts"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Product",
+                    "name": "Gift Baskets",
+                    "category": "Gift Sets"
+                }
+            }
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                    "@type": "Product",
+                    "name": "Customized Cakes",
+                    "category": "cakes"
+                }
+            }
+        ]
+    }
+    </script>
+
+    <!-- Website Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "DN Crafts",
+        "url": "https://your-website-url.com",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": {
+                "@type": "EntryPoint",
+                "urlTemplate": "https://your-website-url.com/?search={search_term_string}"
+            },
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
+
+    <!-- Local Business Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "DN Crafts",
+        "image": "https://your-website-url.com/pics/logo.png",
+        "description": "Personalized gifts and custom products store in Lahore, Pakistan",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Lakhodair",
+            "addressLocality": "Lahore",
+            "addressCountry": "Pakistan"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "31.5497",
+            "longitude": "74.3436"
+        },
+        "telephone": "+92-302-1943684",
+        "email": "infodncrafts@gmail.com",
+        "openingHours": "Mo-Su 09:00-21:00",
+        "paymentAccepted": "Cash, Bank Transfer, JazzCash, EasyPaisa",
+        "priceRange": "$$",
+        "areaServed": {
+            "@type": "Country",
+            "name": "Pakistan"
+        }
+    }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -23,7 +203,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
