--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <a href="/" class="hover:text-yellow-700 transition-colors" itemprop="url"
                         aria-label="DN Crafts Home">
                         <img src="pics/logo.png" alt="DN Crafts - Premium Personalized Gifts in Pakistan"
-                            style="height: 60px;" itemprop="logo" width="120" height="60" loading="eager">
+                            style="height: 60px;" itemprop="logo" width="80" height="85" loading="eager">
                     </a>
                     <meta itemprop="name" content="DN Crafts">
                     <meta itemprop="description" content="Premium personalized gifts and custom products in Pakistan">
@@ -756,104 +756,17 @@
 
             <!-- Slide 1 -->
             <div class="carousel-slide active"
-                style="background-image: url('https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1470&q=80');"
-                itemscope itemtype="https://schema.org/ImageObject">
-                <div class="carousel-content">
-                    <div class="container mx-auto px-6 sm:px-8 lg:px-12">
-                        <div class="max-w-2xl text-white">
-                            <h3 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 slide-in-left"
-                                itemprop="name">
-                                DN Crafts
-                            </h3>
-                            <p class="text-lg sm:text-xl md:text-2xl mb-6 slide-in-left" style="animation-delay: 0.2s;"
-                                itemprop="description">
-                                The perfect gift, for the moments that matter.
-                            </p>
-                            <p class="text-sm sm:text-base md:text-lg mb-8 opacity-90 fade-in-up">
-                                Discover our handcrafted collection of unique gifts, personalized items, and beautiful
-                                decorations.
-                            </p>
-                            <button
-                                class="bg-yellow-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-base sm:text-lg font-semibold hover:bg-yellow-700 transition-all duration-300 inline-flex items-center transform hover:scale-105 fade-in-up"
-                                onclick="scrollToProducts()">
-                                Shop Now
-                                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                                    aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="m9 5 7 7-7 7"></path>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <meta itemprop="url" content="https://images.unsplash.com/photo-1513475382585-d06e58bcb0e0">
+                style="background-image: url('pics\\Ban1.png');">
             </div>
 
             <!-- Slide 2 -->
             <div class="carousel-slide"
-                style="background-image: url('https://images.unsplash.com/photo-1549465220-1a8b9238cd48?ixlib=rb-4.0.3&auto=format&fit=crop&w=1469&q=80');"
-                itemscope itemtype="https://schema.org/ImageObject">
-                <div class="carousel-content">
-                    <div class="container mx-auto px-6 sm:px-8 lg:px-12">
-                        <div class="max-w-2xl text-white ml-auto text-right">
-                            <h3 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 slide-in-right"
-                                itemprop="name">
-                                Special Gift Boxes
-                            </h3>
-                            <p class="text-lg sm:text-xl md:text-2xl mb-6 slide-in-right" style="animation-delay: 0.2s;"
-                                itemprop="description">
-                                Curated collections for every occasion
-                            </p>
-                            <p class="text-sm sm:text-base md:text-lg mb-8 opacity-90 fade-in-up">
-                                From birthdays to anniversaries, find the perfect gift box filled with love and care.
-                            </p>
-                            <button
-                                class="bg-pink-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-base sm:text-lg font-semibold hover:bg-pink-700 transition-all duration-300 inline-flex items-center transform hover:scale-105 fade-in-up">
-                                View Collection
-                                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                                    aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="m9 5 7 7-7 7"></path>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <meta itemprop="url" content="https://images.unsplash.com/photo-1549465220-1a8b9238cd48">
+                style="background-image: url('https://placehold.co/400x500/E3E7EB/5C5E60?text=No+Image+Available');">
             </div>
 
             <!-- Slide 3 -->
-            <div class="carousel-slide"
-                style="background-image: url('https://images.unsplash.com/photo-1606041008023-472dfb5e530f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1476&q=80');"
-                itemscope itemtype="https://schema.org/ImageObject">
-                <div class="carousel-content">
-                    <div class="container mx-auto px-6 sm:px-8 lg:px-12">
-                        <div class="max-w-2xl text-white text-center mx-auto">
-                            <h3 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 slide-in-left"
-                                itemprop="name">
-                                Handmade Excellence
-                            </h3>
-                            <p class="text-lg sm:text-xl md:text-2xl mb-6 slide-in-left" style="animation-delay: 0.2s;"
-                                itemprop="description">
-                                Every piece tells a story
-                            </p>
-                            <p class="text-sm sm:text-base md:text-lg mb-8 opacity-90 fade-in-up">
-                                Crafted with passion and attention to detail, our handmade items bring warmth to every
-                                home.
-                            </p>
-                            <button
-                                class="bg-green-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-base sm:text-lg font-semibold hover:bg-green-700 transition-all duration-300 inline-flex items-center transform hover:scale-105 fade-in-up">
-                                Explore Crafts
-                                <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                                    aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="m9 5 7 7-7 7"></path>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <meta itemprop="url" content="https://images.unsplash.com/photo-1606041008023-472dfb5e530f">
+             <div class="carousel-slide"
+                style="background-image: url('https://placehold.co/400x500/E3E7EB/5C5E60?text=No+Image+Available');">
             </div>
 
             <!-- Slide 4 -->
