--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                             </a>
 
                             <!-- TikTok Logo -->
-                            <a href="https://vm.tiktok.com/ZSHs4nsQDhx4w-ZduCE/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.tiktok.com/@dn.crafts?_t=ZS-8yoMGEQGi48&_r=1" target="_blank" rel="noopener noreferrer">
                                 <div class="social-logo tiktok">
                                     <div class="glow-effect"></div>
                                     <svg viewBox="0 0 24 24">
