--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
                             <a href="/faq" class="block hover:text-white transition-colors">FAQ</a>
                             <a href="/privacy-policy" class="block hover:text-white transition-colors">Privacy
                                 Policy</a>
-                            <a href="/terms-of-service" class="block hover:text-white transition-colors">Terms of
+                            <a href="termsOfService.html" class="block hover:text-white transition-colors">Terms of
                                 Service</a>
                         </div>
                     </nav>
