--- a/index.html
+++ b/index.html
@@ -1063,9 +1063,7 @@
                         <div class="space-y-2 text-sm">
                             <a href="#about-us" class="block hover:text-white transition-colors">About Us</a>
                             <a href="#contact-info" class="block hover:text-white transition-colors">Contact</a>
-                            <a href="/faq" class="block hover:text-white transition-colors">FAQ</a>
-                            <a href="/privacy-policy" class="block hover:text-white transition-colors">Privacy
-                                Policy</a>
+                            <a href="#faq-container" class="block hover:text-white transition-colors">FAQ</a>
                             <a href="termsOfService.html" class="block hover:text-white transition-colors">Terms of
                                 Service</a>
                         </div>
